# C-Learning

./: CMakeLists.txt  N的第一位  README.md  a  g
2020-2021-1学期《C语言程序设计》循环结构II【20计算机12345】/: b.c  d.c  f.c  i.c
函数/: N的第一位.cpp  README.md  a.c  h.c  main.c  判断正整数位数.c  判断素数.c  哥德巴赫猜想.cpp  孪生素数.c  孪生素数.cpp  数制转换.c  最近平方数.c  求最大公约数.c  求最小公倍数.c  求正整数各位上的数字.c  求组合数.c  素数回文.c  逆序输出正整数各位上数字.c
循环结构II/: a.c  c.c  e.c  g.c  h.c  j.c  k.c  l.c  m.c  n.c
数学与数论/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp
数组/: Fibonacci数列前20项.c  FindingMissingCards.c  Matrix.c  Official.c  Reversing.c  三个数排序输出.c  冒泡排序.c  回型方阵.c  排序问题1.c  排序问题2.c  数组元素逆置.c  杨辉三角.c  求矩阵两对角线上的元素之和.c
自学/: CMakeLists.txt  a.out  main.c  井字棋.c  大写转换为小写.c  画金字塔.c  递归计算和.c
