cmake_minimum_required(VERSION 3.17)
project(C_Learning)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_Learning
        函数/main.c
        函数/N的第一位.cpp
        函数/判断正整数位数.c
        函数/判断素数.c
        函数/哥德巴赫猜想.cpp
        函数/孪生素数.c
        函数/孪生素数.cpp
        函数/数制转换.c
        函数/日期计算.c
        函数/最近平方数.c
        函数/求最大公约数.c
        函数/求最小公倍数.c
        函数/求正整数各位上的数字.c
        函数/求组合数.c
        函数/素数回文.c
        函数/逆序输出正整数各位上数字.c
        循环结构II/a.c
        循环结构II/b.c
        循环结构II/c.c
        循环结构II/d.c
        循环结构II/e.c
        循环结构II/f.c
        循环结构II/g.c
        循环结构II/h.c
        循环结构II/i.c
        循环结构II/j.c
        循环结构II/k.c
        循环结构II/l.c
        循环结构II/m.c
        循环结构II/n.c
        自学/main.c)
